# pilot-in-command-workflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  verify_video_module.py  verify_voice_module.py
.claude/: settings.json
.claude/agents/: orchestrator.md  pic-design.md  pic-implementation.md  pic-planning.md  pic-research.md  pic-review.md  pic-testing.md
.claude/hooks/: audit-tool-use.sh  notify-status.sh  on-decision-made.sh  on-pic-handoff.sh  validate-pic-action.sh
.claude/rules/: conflict-resolution.md  decision-protocols.md  pic-coordination.md
.claude/skills/dependency-risk-planner/: SKILL.md
.claude/skills/pic-audit/: SKILL.md
.claude/skills/pic-conflict/: SKILL.md
.claude/skills/pic-decide/: SKILL.md
.claude/skills/pic-handoff/: SKILL.md
.claude/skills/pic-integration/: SKILL.md
.claude/skills/pic-start/: SKILL.md
.claude/skills/pic-status/: SKILL.md
.pic/: audit-log.jsonl  config.json  state.json  status-log.jsonl
.pic/designs/: architecture-summary.md
.pic/handoffs/: WF-20260205-010915-design-to-implementation.md  WF-20260205-010915-planning-to-design.md  WF-20260205-010915-research-to-planning.md
config/: README.md  pipeline.low_vram.yaml  pipeline.rtx3080.yaml  pipeline.rtx4090.yaml  pipeline.yaml
docs/: ARCHITECTURE.md  AUDIT_LOGGING.md  CODEBASE_EXPLAINED.md  DEVELOPER_GUIDE.md  GLOSSARY.md  QUICK_START.md  README.md  README_transcript.txt  REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md  gemini3_summary.txt
docs/avatar-pipeline/: AVATAR_CLI_REFERENCE.md  AVATAR_MODULE_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  FOUNDATION_ARCHITECTURE.md  IMPLEMENTATION_M3_AVATAR.md  IMPLEMENTATION_M5.md  INSTALLATION_GUIDE.md  LESSONS_LEARNED.md  M6_POLISH_COMPLETE.md  README.md  TEST_SUMMARY.md  VERIFICATION.md  VIDEO_MODULE_IMPLEMENTATION.md  VOICE_COMMANDS.md  VOICE_MODULE_IMPLEMENTATION.md
examples/: 01_voice_cloning.py  02_text_to_speech.py  03_avatar_generation.py  04_lipsync_video.py  05_full_pipeline.py  06_api_client.py  README.md  api_example.py  pipeline_example.py
scripts/: hello-world.sh  install.ps1  install.sh  pic-init.sh  verify_polish.sh
src/: __init__.py  cli.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: __init__.py  avatar.py  jobs.py  video.py  voice.py
src/avatar/: README.md  __init__.py  detector.py  generator.py  interfaces.py  profiles.py
src/config/: __init__.py  hardware.py  settings.py
src/orchestration/: README.md  __init__.py  coordinator.py  jobs.py  queue.py
src/utils/: __init__.py  vram.py
src/video/: __init__.py  encoder.py  interfaces.py  lipsync.py
src/voice/: __init__.py  cloner.py  interfaces.py  profiles.py  synthesizer.py
tests/: README.md  __init__.py  conftest.py  test_cli.py
tests/test_api/: test_models.py
tests/test_config/: test_hardware.py  test_settings.py
tests/test_orchestration/: test_jobs.py
tests/test_utils/: __init__.py  test_vram.py
tests/test_voice/: test_profiles.py
