[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-pipeline"
version = "0.1.0"
description = "Open-source AI avatar video pipeline with voice cloning, TTS, and lip-sync"
readme = "README.md"
requires-python = ">=3.10,<3.12"  # Coqui TTS does NOT support Python 3.12+
license = {text = "MIT"}
authors = [
    {name = "Avatar Pipeline Contributors"}
]
keywords = [
    "ai",
    "avatar",
    "voice-cloning",
    "text-to-speech",
    "lip-sync",
    "video-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",  # Max supported version (TTS requires <3.12)
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.0",
    "torchaudio>=2.0",

    # Model libraries
    # WARNING: Coqui TTS (company shut down 2024) has stale dependency pins.
    # pip install TTS will backtrack for 10+ minutes trying to resolve versions.
    # Use the --no-deps workaround described in docs/avatar-pipeline/INSTALLATION_GUIDE.md
    "TTS==0.22.0",              # Coqui TTS - PINNED (last stable, requires Python <3.12)
    "diffusers>=0.21.0",        # SDXL for avatar generation
    "transformers>=4.30.0",     # Hugging Face transformers
    "accelerate>=0.20.0",       # Model loading optimization

    # Computer vision
    "mediapipe>=0.10.0",        # Face detection
    "opencv-python>=4.8.0",     # Video processing
    "Pillow>=10.0.0",           # Image processing

    # API and CLI
    "fastapi>=0.100.0",         # REST API
    "uvicorn[standard]>=0.23.0", # ASGI server
    "click>=8.1.0",             # CLI framework

    # Utilities
    "pyyaml>=6.0",              # Config file parsing
    "pydantic>=2.0",            # Data validation
    "python-multipart>=0.0.6",  # File upload support

    # TTS transitive dependencies (installed manually via --no-deps workaround)
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "scikit-learn",
    "einops",
    "unidecode",
    "num2words",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",  # For FastAPI testing
]

[project.scripts]
avatar = "src.cli:main"

[project.urls]
Homepage = "https://github.com/avatar-pipeline/avatar-pipeline"
Repository = "https://github.com/avatar-pipeline/avatar-pipeline"
Documentation = "https://avatar-pipeline.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
